Configurado bradcrumbs de employee-settings

--- a/src/app/views/employees/employee-settings/employee-settings-details/employee-settings-details.component.html
+++ b/src/app/views/employees/employee-settings/employee-settings-details/employee-settings-details.component.html
@@ -2,7 +2,7 @@
   <aw-view-header [breadcrumb]="breadcrumb">Configuración de empleado</aw-view-header>
 
   <aw-card>
-    <a [routerLink]="[siteUrls.companySettings.edit]" class="mb-3 btn btn-sm btn-outline-success">
+    <a [routerLink]="[siteUrls.employees.settingsEdit]" class="mb-3 btn btn-sm btn-outline-success">
       <span class="fa-solid fa-pencil"></span> Editar
     </a>
 
