--- a/src/app/views/employees/employee-invite/employee-invite.component.html
+++ b/src/app/views/employees/employee-invite/employee-invite.component.html
@@ -43,6 +43,18 @@
       </div>
       <!-- end email -->
 
+      <!-- timezone -->
+      <div class="mb-2">
+        <aw-form-timezone
+          [badRequest]="badRequest"
+          [form]="form"
+          [submitted]="submitted"
+          fieldName="timezone"
+          formControlName="timezone"
+          label="Zona horaria" />
+      </div>
+      <!-- end timezone -->
+
       <!-- buttons-->
       <aw-btn-back cssClass="btn btn-primary mt-2 me-2" />
 
