Fix actualizar tiempos de empleado

--- a/src/app/views/employees/employee-settings/employee-settings-details/employee-settings-details.component.html
+++ b/src/app/views/employees/employee-settings/employee-settings-details/employee-settings-details.component.html
@@ -14,7 +14,9 @@
           <tr>
             <th>
               Zona horaria
-              <aw-tooltip-info content="Prueba de tooltip" cssClass="text-info"></aw-tooltip-info>
+              <aw-tooltip-info
+                content="Los tiempos se vera en base a la zona horaria"
+                cssClass="text-info"></aw-tooltip-info>
             </th>
             <td>{{ companySettings()?.timezone }} - {{ nowWithTimezone }}</td>
           </tr>
