--- a/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -1,5 +1,5 @@
 <aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Tiempos empleados</aw-view-header>
+  <aw-view-header [breadcrumb]="breadcrumb">Tiempos de empleados</aw-view-header>
 
   <aw-card>
     <!-- toolbar -->
