Implmentado creacion de tiempos por staff

--- a/src/app/views/time-control-records/time-control-record-create/time-control-select-employee/time-control-select-employee.component.html
+++ b/src/app/views/time-control-records/time-control-record-create/time-control-select-employee/time-control-select-employee.component.html
@@ -1,14 +1,6 @@
-<div class="d-flex my-3">
-  <h5 class="m-auto">Empleados en la tarea - {{ companyTaskSelected()?.name }}</h5>
-</div>
-
 <!-- toolbar -->
-<div class="d-flex mb-2">
-  <span class="me-auto">
-    <button (click)="handleChangeComponent()" class="btn btn-sm btn-outline-success">
-      <span class="fa-solid fa-user-plus"></span> Añadir empleados
-    </button>
-  </span>
+<div class="mb-2">
+  <h3 class="text-center mb-4">Seleccionar empleado</h3>
 
   <span>
     <aw-table-input-search
@@ -51,3 +43,5 @@
     [apiResult]="apiResult" />
 }
 <!-- end pagination -->
+
+<aw-btn-back text="Cancelar" />
