--- a/src/app/components/buttons/btn-back/btn-back.component.html
+++ b/src/app/components/buttons/btn-back/btn-back.component.html
@@ -1,1 +1,1 @@
-<button (click)="handleClick()" [class]="cssClass" type="button"><span [class]="icon"></span> Volver</button>
+<button (click)="handleClick()" [class]="cssClass" type="button"><span [class]="icon"></span> {{ text }}</button>
