Implementado eliminar un TimeControl

--- a/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -91,7 +91,7 @@
                     title="Editar"></span>
 
                   <span
-                    (click)="handleTimeControlModalEdit(timeControl)"
+                    (click)="handleDeleteTimeControl(timeControl)"
                     awTooltip
                     class="fa-solid fa-circle-xmark cursor-pointer text-danger ms-2"
                     title="Eliminar"></span>
