Creada interface entity CategoryAbsence

--- a/src/app/views/category-absence/category-absence-list/category-absence-list.component.html
+++ b/src/app/views/category-absence/category-absence-list/category-absence-list.component.html
@@ -1,1 +1,5 @@
-<p>category-absence-list works!</p>
+<aw-view-base>
+  <aw-view-header>Categorías de ausencias</aw-view-header>
+
+  <aw-card> </aw-card>
+</aw-view-base>
