Implementado creacion de ausencias

--- a/src/app/views/category-absence/category-absence-create/category-absence-create.component.html
+++ b/src/app/views/category-absence/category-absence-create/category-absence-create.component.html
@@ -1,1 +1,65 @@
-<p>category-absence-create works!</p>
+<aw-view-base>
+  <aw-view-header [breadcrumb]="breadcrumb">Crear ausencia</aw-view-header>
+
+  <aw-card>
+    <form (ngSubmit)="handleSubmit()" [formGroup]="form">
+      <aw-non-field-errors [badRequest]="badRequest" />
+
+      @if (form.get("description")?.value) {
+        <div class="my-3">
+          <aw-badge
+            [background]="form.get('background')?.value"
+            [color]="form.get('color')?.value"
+            [name]="form.get('description')?.value" />
+        </div>
+      }
+
+      <!-- description -->
+      <div class="mb-2">
+        <aw-form-input
+          [badRequest]="badRequest"
+          [form]="form"
+          [submitted]="submitted"
+          fieldName="description"
+          formControlName="description"
+          label="Descripción" />
+      </div>
+      <!-- end description -->
+
+      <div class="d-flex">
+        <!-- background -->
+        <div class="mb-2">
+          <aw-form-color
+            [badRequest]="badRequest"
+            [form]="form"
+            [submitted]="submitted"
+            fieldName="background"
+            formControlName="background"
+            label="Color de fondo" />
+        </div>
+        <!-- end background -->
+
+        <!-- color -->
+        <div class="mb-2 ms-5">
+          <aw-form-color
+            [badRequest]="badRequest"
+            [form]="form"
+            [submitted]="submitted"
+            fieldName="color"
+            formControlName="color"
+            label="Color de texto" />
+        </div>
+        <!-- end color -->
+      </div>
+
+      <!-- buttons-->
+      <aw-btn-back cssClass="btn btn-primary mt-2 me-2" />
+      <aw-btn-loading
+        [loading]="loading"
+        btnClass="btn btn-success mt-2"
+        btnIcon="fa-solid fa-list-check"
+        btnText="Crear" />
+      <!-- end buttons-->
+    </form>
+  </aw-card>
+</aw-view-base>
