Implementado lista de categoryAbsence

--- a/src/app/views/category-absence/category-absence-list/category-absence-list.component.html
+++ b/src/app/views/category-absence/category-absence-list/category-absence-list.component.html
@@ -9,6 +9,57 @@
           <span class="fa-solid fa-list-check"></span> Crear ausencia
         </a>
       </span>
+
+      <span>
+        <aw-table-input-search
+          (clickClean)="handleClickClean($event)"
+          [apiResult]="apiResult"
+          [tableHeaderConfig]="tableHeaderConfig" />
+      </span>
     </div>
+    <!-- end toolbar -->
+
+    <!-- table -->
+    <aw-table [apiResult]="apiResult" [loading]="loading">
+      <thead awThead>
+        <tr
+          (clickOrdering)="handleReloadData()"
+          [apiResult]="apiResult"
+          [tableHeaderConfig]="tableHeaderConfig"
+          awTableHeader></tr>
+      </thead>
+
+      @if (apiResult) {
+        <tbody awTbody>
+          @for (categoryAbsence of apiResult.items; track categoryAbsence) {
+            <tr>
+              <td>
+                <aw-badge
+                  [background]="categoryAbsence.background"
+                  [color]="categoryAbsence.color"
+                  [name]="categoryAbsence.description"></aw-badge>
+              </td>
+              <td [innerHTML]="categoryAbsence.active | boolToIcon"></td>
+              <td>
+                <aw-dot [color]="categoryAbsence.background"></aw-dot>
+              </td>
+              <td>
+                <aw-dot [color]="categoryAbsence.color"></aw-dot>
+              </td>
+            </tr>
+          }
+        </tbody>
+      }
+    </aw-table>
+    <!-- end table -->
+
+    <!-- pagination -->
+    @if (apiResult) {
+      <aw-pagination
+        (changePage)="handleReloadData()"
+        (changePageListNumber)="handleReloadData()"
+        [apiResult]="apiResult" />
+    }
+    <!-- end pagination -->
   </aw-card>
 </aw-view-base>
