Implementado actualizar ausencias

--- a/src/app/views/category-absence/category-absence-edit/category-absence-edit.component.html
+++ b/src/app/views/category-absence/category-absence-edit/category-absence-edit.component.html
@@ -1,1 +1,74 @@
-<p>category-absence-edit works!</p>
+<aw-view-base>
+  <aw-view-header [breadcrumb]="breadcrumb">Editar ausencia</aw-view-header>
+
+  <aw-card>
+    <!-- form -->
+    @if (categoryAbsence) {
+      <form (ngSubmit)="handleSubmit()" [formGroup]="form">
+        <aw-non-field-errors [badRequest]="badRequest" />
+        @if (form.get("description")?.value) {
+          <div class="my-3">
+            <aw-badge
+              [background]="form.get('background')?.value"
+              [color]="form.get('color')?.value"
+              [name]="form.get('description')?.value" />
+          </div>
+        }
+        <!-- description -->
+        <div class="mb-2">
+          <aw-form-input
+            [badRequest]="badRequest"
+            [form]="form"
+            [submitted]="submitted"
+            fieldName="description"
+            formControlName="description"
+            label="Descripción" />
+        </div>
+        <!-- end description -->
+        <!-- active -->
+        <div class="mb-2">
+          <aw-form-checkbox
+            [badRequest]="badRequest"
+            [form]="form"
+            [submitted]="submitted"
+            fieldName="active"
+            formControlName="active"
+            label="Activo" />
+        </div>
+        <!-- end active -->
+        <div class="d-flex">
+          <!-- background -->
+          <div class="mb-2">
+            <aw-form-color
+              [badRequest]="badRequest"
+              [form]="form"
+              [submitted]="submitted"
+              fieldName="background"
+              formControlName="background"
+              label="Color de fondo" />
+          </div>
+          <!-- end background -->
+          <!-- color -->
+          <div class="mb-2 ms-5">
+            <aw-form-color
+              [badRequest]="badRequest"
+              [form]="form"
+              [submitted]="submitted"
+              fieldName="color"
+              formControlName="color"
+              label="Color de texto" />
+          </div>
+          <!-- end color -->
+        </div>
+        <aw-btn-back cssClass="btn btn-primary mt-2" />
+        <aw-btn-loading
+          [loading]="loadingForm"
+          btnClass="btn btn-success mt-2 ms-2"
+          btnIcon="fa-regular fa-floppy-disk"
+          btnText="Guardar"
+          spinnerLoadingText="Guardando" />
+      </form>
+    }
+    <!-- end form -->
+  </aw-card>
+</aw-view-base>
