--- a/src/app/views/category-absence/category-absence-list/category-absence-list.component.html
+++ b/src/app/views/category-absence/category-absence-list/category-absence-list.component.html
@@ -1,5 +1,5 @@
 <aw-view-base>
-  <aw-view-header>Categorías de ausencias</aw-view-header>
+  <aw-view-header [breadcrumb]="breadcrumb">Categorías de ausencias</aw-view-header>
 
   <aw-card>
     <!-- toolbar -->
@@ -45,6 +45,15 @@
               </td>
               <td>
                 <aw-dot [color]="categoryAbsence.color"></aw-dot>
+              </td>
+              <td>
+                <span class="d-flex justify-content-end btn-actions">
+                  <span
+                    (click)="handleEdit(categoryAbsence)"
+                    awTooltip
+                    class="fa-solid fa-pencil cursor-pointer"
+                    title="Editar"></span>
+                </span>
               </td>
             </tr>
           }
