URLs en signular

--- a/src/app/views/category-absence/category-absence-list/category-absence-list.component.html
+++ b/src/app/views/category-absence/category-absence-list/category-absence-list.component.html
@@ -5,7 +5,7 @@
     <!-- toolbar -->
     <div class="d-flex mb-2">
       <span class="me-auto">
-        <a [routerLink]="siteUrls.categoryAbsence.create" class="btn btn-sm btn-outline-success">
+        <a [routerLink]="siteUrls.categoryAbsences.create" class="btn btn-sm btn-outline-success">
           <span class="fa-solid fa-list-check"></span> Crear ausencia
         </a>
       </span>
