--- a/src/app/views/errors/error404/error404.component.html
+++ b/src/app/views/errors/error404/error404.component.html
@@ -12,7 +12,9 @@
       </div>
 
       <div class="col-12 text-center">
-        <button [routerLink]="siteUrls.home" class="btn btn-primary">
+        <aw-btn-back />
+
+        <button [routerLink]="siteUrls.home" class="btn btn-primary ms-2">
           <span class="icon fas fa-home"></span> Inicio
         </button>
       </div>
