--- a/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
@@ -2,7 +2,7 @@
   <aw-view-header [breadcrumb]="breadcrumb">Configuración</aw-view-header>
 
   <aw-card>
-    <a [routerLink]="[siteUrls.companySettings.edit]" class="mb-3 btn btn-sm btn-outline-success">
+    <a [routerLink]="[siteUrls.companySettings.update]" class="mb-3 btn btn-sm btn-outline-success">
       <span class="fa-solid fa-pencil"></span> Editar
     </a>
 
