--- a/src/app/views/employees/employee-update/employee-update.component.html
+++ b/src/app/views/employees/employee-update/employee-update.component.html
@@ -1,4 +1,4 @@
-<aw-view-base cssContent="container">
+<aw-view-base>
   <aw-view-header [breadcrumb]="breadcrumb">Editar datos de empleado</aw-view-header>
 
   <aw-card>
