--- a/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
@@ -3,8 +3,8 @@
 </div>
 
 <!-- toolbar -->
-<div class="d-flex mb-2">
-  <span class="me-auto">
+<div class="d-flex justify-content-between mb-2">
+  <span>
     <button (click)="handleChangeComponent()" class="btn btn-sm btn-outline-success">
       <span class="fa-solid fa-user-plus"></span> Añadir empleados
     </button>
