--- a/src/app/views/category-absences/category-absence-list/category-absence-list.component.html
+++ b/src/app/views/category-absences/category-absence-list/category-absence-list.component.html
@@ -3,8 +3,8 @@
 
   <aw-card>
     <!-- toolbar -->
-    <div class="d-flex mb-2">
-      <span class="me-auto">
+    <div class="d-flex justify-content-between mb-2">
+      <span>
         <a [routerLink]="siteUrls.categoryAbsences.create" class="btn btn-sm btn-outline-success">
           <span class="fa-solid fa-list-check"></span> Crear ausencia
         </a>
