--- a/src/app/views/employees/employee-list/employee-list.component.html
+++ b/src/app/views/employees/employee-list/employee-list.component.html
@@ -3,8 +3,8 @@
 
   <aw-card>
     <!-- toolbar -->
-    <div class="d-flex mb-2">
-      <span class="me-auto">
+    <div class="d-flex justify-content-between mb-2">
+      <span>
         <a [routerLink]="siteUrls.employees.invite" class="btn btn-sm btn-outline-success">
           <span class="fas fa-user-plus"></span> Invitar empleado
         </a>
@@ -26,7 +26,7 @@
           (clickOrdering)="handleReloadData()"
           [apiResult]="apiResult"
           [tableHeaderConfig]="tableHeaderConfig"
-        awTableHeader></tr>
+          awTableHeader></tr>
       </thead>
 
       @if (apiResult) {
