Eliminado modal en edicion de registro de tiempos

--- a/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -94,7 +94,7 @@
                 <span class="d-flex justify-content-end btn-actions">
                   @if (timeControl.timeState === timeState.close) {
                     <span
-                      (click)="handleTimeControlModalEdit(timeControl)"
+                      (click)="handleTimeControlUpdate(timeControl)"
                       awTooltip
                       class="fa-solid fa-pencil cursor-pointer"
                       title="Editar"></span>
