--- a/src/app/views/time-control-records/time-control-record-update/time-control-record-update.component.html
+++ b/src/app/views/time-control-records/time-control-record-update/time-control-record-update.component.html
@@ -1,18 +1,12 @@
-<div class="modal-content">
-  <!-- header -->
-  <div class="modal-header">
-    <h5 class="modal-title">Registro de tiempo</h5>
-    <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
-  </div>
-  <!-- end header -->
+<aw-view-base>
+  <aw-view-header [breadcrumb]="breadcrumb">Actualizar tiempo</aw-view-header>
 
-  <!-- body -->
-  <div class="modal-body">
+  <aw-card>
     @if (timeControl) {
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
-        <div class="mb-2 d-flex justify-content-between">
+        <div class="mb-2 row">
           <!-- timeStart -->
-          <div>
+          <div class="col-6">
             <aw-form-datepicker
               [badRequest]="badRequest"
               [form]="form"
@@ -34,7 +28,7 @@
           <!-- end timeStart -->
 
           <!-- timeFinish -->
-          <div>
+          <div class="col-6">
             <aw-form-datepicker
               [badRequest]="badRequest"
               [form]="form"
@@ -54,25 +48,20 @@
               label="" />
           </div>
           <!-- end timeFinish -->
-        </div>
 
-        <!-- footer -->
-        <div class="modal-footer">
-          <button (click)="handleClose()" class="btn btn-secondary" data-bs-dismiss="modal" type="button">
-            Cerrar
-          </button>
+          <div class="mt-3 col-12">
+            <aw-btn-back />
 
-          <aw-btn-loading
-            [btnType]="btnType.submit"
-            [loading]="loadingForm"
-            btnClass="btn btn-success ms-2"
-            btnIcon="fa-regular fa-floppy-disk"
-            btnText="Guardar cambios"
-            spinnerLoadingText="Guardando" />
+            <aw-btn-loading
+              [btnType]="btnType.submit"
+              [loading]="loadingForm"
+              btnClass="btn btn-success ms-2"
+              btnIcon="fa-regular fa-floppy-disk"
+              btnText="Guardar"
+              spinnerLoadingText="Guardando" />
+          </div>
         </div>
-        <!-- end footer -->
       </form>
     }
-  </div>
-  <!-- end body -->
-</div>
+  </aw-card>
+</aw-view-base>
