Creado modulo WorkDays

--- a/src/app/views/manage-holidays/manage-holidays.component.html
+++ b/src/app/views/manage-holidays/manage-holidays.component.html
@@ -1,3 +1,7 @@
 <aw-view-base>
-  <aw-view-header>Días festivos</aw-view-header>
+  <aw-view-header>Gestión de días festivos</aw-view-header>
+
+  <aw-card>
+    <aw-work-days />
+  </aw-card>
 </aw-view-base>
