--- a/src/app/views/manage-holidays/manage-holidays.component.html
+++ b/src/app/views/manage-holidays/manage-holidays.component.html
@@ -2,6 +2,8 @@
   <aw-view-header>Gestión de días festivos</aw-view-header>
 
   <aw-card>
+    <aw-company-holidays />
+
     <aw-work-days />
   </aw-card>
 </aw-view-base>
