--- a/src/app/views/manage-holidays/manage-holidays.component.html
+++ b/src/app/views/manage-holidays/manage-holidays.component.html
@@ -4,6 +4,6 @@
   <aw-card>
     <aw-working-days-week (workDaysEmitter)="handleWorkDays($event)" />
 
-    <aw-year-calendar [year]="2024" />
+    <aw-year-calendar [year]="year" [calendarDays]="holidays" />
   </aw-card>
 </aw-view-base>
